--- a/linguaskill-mock/package.json
+++ b/linguaskill-mock/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@lottiefiles/dotlottie-react": "^0.15.1",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.1",
