--- a/linguaskill-mock/package.json
+++ b/linguaskill-mock/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://odaviespecifico.github.io/Linguaskill/",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
