--- a/linguaskill-mock/package.json
+++ b/linguaskill-mock/package.json
@@ -8,11 +8,13 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
+    "test": "vitest --mode test",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.27.1",
     "@dnd-kit/core": "^6.3.1",
     "@lottiefiles/dotlottie-react": "^0.15.1",
     "@supabase/supabase-js": "^2.55.0",
@@ -32,6 +34,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "jsdom": "^27.0.0",
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   }
 }
